# Qwen3-TTS-Tokenizer-12Hz-Trainer

./: .gitignore  .gitmodules  README.md  benchmark.sh  pyproject.toml  train.sh
docs/: decoder_architecture.md
scripts/: hf_to_webdataset.py  parquet_to_webdataset.py
src/: dataset.py  evaluate_checkpoints.py  inference.py  losses.py  merge.py  trainer.py
